<!--
  ~ // Copyright (c) Microsoft Corporation.
  ~ // All rights reserved.
  ~ //
  ~ // This code is licensed under the MIT License.
  ~ //
  ~ // Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ // of this software and associated documentation files(the "Software"), to deal
  ~ // in the Software without restriction, including without limitation the rights
  ~ // to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ // copies of the Software, and to permit persons to whom the Software is
  ~ // furnished to do so, subject to the following conditions :
  ~ //
  ~ // The above copyright notice and this permission notice shall be included in
  ~ // all copies or substantial portions of the Software.
  ~ //
  ~ // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ // AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ // THE SOFTWARE.
  -->
<resources>
    <string name="app_name">AndroidAutomationApp</string>
    <string name="into_text">Android Automation Test App!</string>
    <string name="acquire_token">Acquire Token</string>
    <string name="acquire_token_silent">Acquire Token Silent</string>
    <string name="invalidate_AT">Expire Access Token</string>
    <string name="invalidate_token">Invalidate Refresh Token</string>
    <string name="empty_cache">Clear Cache</string>
    <string name="read_cache">Read Cache</string>
    <string name="signin_info">Enter the sign-in info</string>
    <string name="go">Go</string>
    <string name="enter_signin_info">Please enter the sign in info here…</string>
    <string name="done">Done</string>
    <string name="invalidate_frt">Invalidate FRT</string>
    <string name="expire_at_and_invalidate_rt">Expire AT and Invalidate RT</string>
    <string name="get_users">Get Users</string>
    <string name="user_homeobjectid">User.homeObjectId</string>
    <string name="sign_out">Sign Out</string>
</resources>
