<?xml version="1.0" encoding="utf-8"?><!--
  ~ // Copyright (c) Microsoft Corporation.
  ~ // All rights reserved.
  ~ //
  ~ // This code is licensed under the MIT License.
  ~ //
  ~ // Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ // of this software and associated documentation files(the "Software"), to deal
  ~ // in the Software without restriction, including without limitation the rights
  ~ // to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ // copies of the Software, and to permit persons to whom the Software is
  ~ // furnished to do so, subject to the following conditions :
  ~ //
  ~ // The above copyright notice and this permission notice shall be included in
  ~ // all copies or substantial portions of the Software.
  ~ //
  ~ // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ // AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ // THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.microsoft.aad.automation.testapp.MainActivity">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/into_text" />

    <!-- AcquireToken button -->
    <Button
        android:id="@+id/acquireToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acquire_token" />

    <!-- AcquireTokenSilent Button -->
    <Button
        android:id="@+id/acquireTokenSilent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acquire_token_silent" />

    <!-- InvalidateAccessToken Button -->
    <Button
        android:id="@+id/expireAccessToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidate_AT" />

    <!-- Button for invalidate the refresh token -->
    <Button
        android:id="@+id/invalidateRefreshToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expire_at_and_invalidate_rt" />

    <!-- Button for read cache-->
    <Button
        android:id="@+id/readCache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_cache" />

    <!-- EmptyCache Button -->
    <Button
        android:id="@+id/clearCache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cache" />

    <!-- Get users Button -->
    <Button
        android:id="@+id/getUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_users" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

</LinearLayout>
